# vapor

./: README.md  main.py  pyproject.toml
src/vapor/: __init__.py  utils.py
src/vapor/core/: __init__.py  platform.py
src/vapor/trackers/: __init__.py  acceleration.py  orientation.py  position.py  velocity.py
src/vapor/transforms/: __init__.py
tests/: test_comprehensive_relative_state.py  test_coordinate_systems.py  test_edge_cases_and_failure_modes.py  test_intuitive_relative_motion.py  test_orientation_and_platform.py  test_relative_platform_scenarios.py  test_transformation_reversibility.py
